--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "joi": "^17.6.0",
     "node": "^18.5.0",
     "pg": "^8.7.3"
   }
